# GamingAgent

./: .env  .gitignore  ACE_ATTORNEY_SETUP_STATUS.md  CLAUDE.md  IMPROVEMENTS.md  POKEMON_RED_USAGE.md  README_JA.md  analyze_pokemon_log.py  config_loader.py  extract_pokemon_status.py  llm-studio-setup.md  pokemon_japanese_status_report.md  pokemon_red_start.bat  prompt_localizer.py  pyproject.toml  run_ace_attorney_test.ps1  run_ace_attorney_unlimited.ps1  run_pokemon_red_test.ps1  run_pokemon_test.ps1  run_pokemon_unlimited.ps1  stub_llm_server.py  test_2048_game.py  test_llm_studio.py
.claude/: settings.local.json
gamingagent/agents/: base_agent.py
gamingagent/configs/custom_06_pokemon_red/: config.yaml  module_prompts.json  module_prompts_local_llm.json
gamingagent/configs/retro_02_ace_attorney/: config.yaml  module_prompts_local_llm.json
gamingagent/envs/custom_06_pokemon_red/: full_collision_map.py  game_env_config.json  memory_reader.py  pokemonRedEnv.py
gamingagent/envs/retro_02_ace_attorney/: aceAttorneyEnv.py
gamingagent/envs/retro_02_ace_attorney/AceAttorney-GbAdvance/: scenario.json
gamingagent/modules/: base_module.py  core_module.py  memory_module.py  perception_module.py  reasoning_module.py
lmgame-bench/: single_agent_runner.py
tools/: log_window.py  utils.py
tools/serving/: api_manager.py  api_providers.py
